<resources>
    <string name="app_name">My Application11</string>

    <!-- Strings for activity_main.xml -->
    <string name="background_image_description">Background Image</string>
    <string name="welcome_back_text_description">Welcome Back Text</string>
    <string name="sign_in_text_description">Sign In Text</string>
    <string name="valid_email_hint">Valid Email</string>
    <string name="email_input_description">Email Input Field</string>
    <string name="password_hint">Password</string>
    <string name="password_input_description">Password Input Field</string>
    <string name="remember_me_checkbox_description">Remember Me Checkbox</string>
    <string name="remember_me_text_description">Remember Me Text</string>
    <string name="button_next">Next</string>
    <string name="new_member_button_description">New Member Button</string>

    <!-- Strings for activity_second.xml -->
    <string name="get_started_text_description">Get Started Text</string>
    <string name="free_account_text_description">Create Your Free Account</string>
    <string name="full_name_hint">Full Name</string>
    <string name="accept_terms_checkbox_description">Accept Terms Checkbox</string>
    <string name="terms_box_text_description">Checking the Box Text</string>
    <string name="member_login_button_description">Login Button</string>

    <!-- Strings for activity_resc.xml -->
    <string name="recycler_view_description">Recipes RecyclerView</string>

    <!-- Strings for fragment_a.xml -->
    <string name="fragment_a_text">Fragment A</string>
    <string name="fragment_a_text_description">Text for Fragment A</string>

    <!-- Strings for fragment_b.xml -->
    <string name="fragment_b_text">Fragment B</string>
    <string name="fragment_b_text_description">Text for Fragment B</string>

    <!-- Strings for item_res.xml -->
    <string name="recipe_image_description">Recipe Image</string>
    <string name="recipe_title_placeholder">Recipe Title</string>
    <string name="recipe_title_description">Title of the Recipe</string>
    <string name="button_like">Like</string>
    <string name="button_like_description">Like Button</string>
    <string name="button_share">Share</string>
    <string name="button_share_description">Share Button</string>
</resources>
